fix color title witch option params visible

--- a/src/components/common/Parametr/Param.scss
+++ b/src/components/common/Parametr/Param.scss
@@ -26,6 +26,11 @@
         }
     }
 
+    .param__title_active {
+        font-weight: 500;
+        color: #0F74D1;
+    }
+
     .param__options-wrapper {
         width: 100%;
         color:
