--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -28,6 +28,7 @@ body {
         .filter__title {
             padding: 10px 0 12px 20px;
             background-color: #0F74D1;
+            font-weight: 500;
 
             .filter__arrow_up {
                 transform: rotate(180deg);
